Fix first template test